<resources>
    <string name="app_name">Github</string>

    <string name="tab_1">Followers"</string>
    <string name="tab_2">Following"</string>
    <string name="github">Github</string>
    <string name="setting">Settings</string>
    <string name="title_activity_settings2">SettingsActivity2</string>
    <string name="basic">Basics</string>
    <string name="Switch">Switch Preference</string>
    <string name="Click">Click to Switch On or Off</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>