<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />



    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="switch"
            app:defaultValue="true"
            app:summary="@string/Click"
            app:title="@string/Switch" />

    </PreferenceCategory>

    <ListPreference app:title="Dark Mode"
        app:key="dark_mode"
        app:useSimpleSummaryProvider="true"
        app:defaultValue="1"
        app:entries="@array/dark_mode_entries"
        app:entryValues="@array/dark_mode_entries_values"
        />

</PreferenceScreen>